# gauche-rdf

./: COPYING  DIST  Makefile.in  config.status  configure  configure.ac
example/: index.rdf  rdf2triple  xml2triple
src/: Makefile  Makefile.in
src/rdf/: display.scm  namespace.scm  query.scm  store.scm  striple.scm  util.scm
src/rdf/parser/: xml.scm
test/: Makefile  namespace.scm.test  query.scm.test  store.scm.test  striple.scm.test  test
